[Varun] MOD: fixed bugs in update controller
