# app/models/user.rb
@@ -8,7 +8,7 @@ class User < ApplicationRecord
 
   validates :name, presence: true
   validates :email, presence: true, uniqueness: true, format: { with: URI::MailTo::EMAIL_REGEXP }
-  validates :password, length: { minimum: 6 }, if: -> { new_record? || !password.nil? }
+  validates :password, length: { minimum: 8 }, if: -> { new_record? || !password.nil? }
 
   def self.ransackable_attributes(auth_object = nil)
     ["id", "email", "created_at", "updated_at", "subscription_id"]
