# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2025_05_06_044418) do
+ActiveRecord::Schema[7.1].define(version: 2025_05_07_053015) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -126,6 +126,8 @@ ActiveRecord::Schema[7.1].define(version: 2025_05_06_044418) do
     t.datetime "updated_at", null: false
     t.string "fcm_token"
     t.boolean "notify_on_new_movie"
+    t.string "device_token"
+    t.boolean "notifications_enabled"
     t.index ["email"], name: "index_users_on_email", unique: true
   end
 
